# rust-assignments

./: .gitignore  README.md
coding/: Cargo.toml  README.md
coding/src/: main.rs
coding_embedded/: Cargo.toml  README.md  memory.x
coding_embedded/.cargo/: config
coding_embedded/src/: main.rs  main.rs.alt
guessing_game/: Cargo.toml  README.md
guessing_game/src/: main.rs
